package com.merve.inventory.model.enums;

public enum ProductType {
    ELECTRONIC,
    FOOD,
    CLOTHING
}